cargo-features = ["edition"]

[package]
name = "netcode"
version = "0.3.1"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]
build = "rust/build.rs"
links = "libnetcode"
keywords = ["netcode"]
license = "BSD-3-Clause"
repository = "https://github.com/vvanders/netcode-rust"
documentation = "https://docs.rs/netcode"
description = "Wrapper for netcode.io library"
exclude = [
    "go/*"
]

[dependencies]
libsodium-sys = "0.2"
log = "0.4"
byteorder = "1.3"
time = "0.2"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"
bindgen = "0.54"

[[bin]]
path = "rust/src/example.rs"
name = "example"

[lib]
path = "rust/src/lib.rs"
